# UEInspector

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  README.md
cmake/: common.cmake
cmake/dependencies/: imgui.cmake
src/: Offsets.h
src/dxhook/: DX11Hook.cpp
src/gui/: ImGuiAddon.cpp  UnrealInternal.h
